--- a/coding_practice_JS/treeMap/treeMap.html
+++ b/coding_practice_JS/treeMap/treeMap.html
@@ -36,23 +36,6 @@
 
     }
     Tree.prototype = {
-        /*tryIn: function(rectAttr0, rectAttr, type){
-            var coe = Math.max(rectAttr0.rectHeight, rectAttr0.rectWidth)/Math.min(rectAttr0.rectHeight, rectAttr0.rectWidth);
-            //var fixEdge = Math.min(rectAttr0.rectHeight, rectAttr0.rectWidth);
-            var fixEdge = (type == true)?(rectAttr0.rectWidth):(rectAttr0.rectHeight);
-            //console.log(type);
-            console.log("old long edge = "+Math.max(rectAttr0.rectHeight, rectAttr0.rectWidth));
-            console.log("old short edge = "+Math.min(rectAttr0.rectHeight, rectAttr0.rectWidth));
-            console.log("fixed edge ="+fixEdge);
-            console.log("new coe and old coe = "+Math.max(fixEdge, rectAttr.size/fixEdge)/Math.min(fixEdge, rectAttr.size/fixEdge)+" "+coe);
-
-            if(Math.max(fixEdge, rectAttr.size/fixEdge)/Math.min(fixEdge, rectAttr.size/fixEdge) <= coe) {
-                //console.log("inTrue");
-                return true;
-            }
-            else
-                return false;
-        },*/
         tryIn: function(rects, rectTmp, type){
             var size = 0;
             var testOldHeight = rects[rects.length-1].rectHeight;
@@ -93,9 +76,11 @@
             for(var i = 0; i < dataset.children.length; i++){
                 size += dataset.children[i].size;
             }
+            console.log(size);
+            console.log(width*height);
             for(var i = 0; i < dataset.children.length; i++){
                 dataset.children[i].size = dataset.children[i].size/size*width*height;
-                //console.log("the new size =" + dataset.children[i].size);
+                console.log("the new size =" + dataset.children[i].size);
             }
         },
         draw: function(rectAttr, svg){
@@ -108,45 +93,31 @@
             rect.setAttribute("stroke", "white");
             svg.appendChild(rect);
         },
-        start: function(){
+        cal: function(x, y, width, height,svg,data,colorSet){
+            console.log(data);
+            var dataset = data;
             var rects = [];
             rects.push({
                 rectX: 0, rectY: 0, rectWidth: 500, rectHeight: 400, size: 0, color: colorSet[0]
             });
-//            rects.push({
-//                rectX: 0, rectY: 0, rectWidth: 400, rectHeight: 400, size: 0, color: colorSet[0]
-//            });
-            //console.log(rects[0]);
-            var width = 600;
-            var height = 400;
-            var x = 0, y = 0;
-            var type = true;
-            var svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
-            svg.setAttribute("width", width);
-            svg.setAttribute("height", height);
-            this.suitSvg(dataset, width, height);
-            document.body.appendChild(svg);
-
-            for(var l = 0; l < dataset.children.length; l++){
-                console.log(dataset.children[l].name+" "+dataset.children[l].size);
-            }
-
+            var type = (width>=height)?true:false;
             rects[0].size = dataset.children[0].size;
-            rects[0].rectX = 0;
-            rects[0].rectY = 0;
-            rects[0].rectHeight = 400;
+            rects[0].rectX = x;
+            rects[0].rectY = y;
+            rects[0].rectHeight = height;
             rects[0].rectWidth = rects[0].rectWidth = rects[0].size/rects[0].rectHeight;
+            dataset.children[0].rect = rects[0];
 
             x = rects[0].rectX + rects[0].rectWidth;
             y = rects[0].rectY;
             width -= rects[0].rectWidth;
-            //this.draw(rects[0], svg);
 
-            for(var i = 1; i < 10; i++){
+            for(var i = 1; i < dataset.children.length; i++){
                 var rectTmp = {};
                 //rectTmp.rectWidth = (rects[last].rectWidth<=rects[last].rectHeight)?(rects[last].rectWidth):();
                 rectTmp.size = dataset.children[i].size;
-                rectTmp.color = colorSet[i];
+                //if(flag == true)
+                    rectTmp.color = colorSet[i];
                 console.log("new rect size = "+rectTmp.size);
                 if(this.tryIn(/*rects[rects.length-1]*/rects, rectTmp, type) == true){
                     var size = 0;
@@ -199,6 +170,7 @@
                         height -= rectTmp.rectHeight;
                     }
                     rects.push(rectTmp);
+                    dataset.children[i].rect = rectTmp;
                     //console.log(rects);
                 }
                 else{
@@ -206,9 +178,10 @@
                     for(var j = 0; j < rects.length; j++) {
                         //console.log(rects[j]);
                         this.draw(rects[j], svg);
+                       // if(dataset.children)
                     }
                     var lengthTmp = rects.length;
-                    if(lengthTmp == 1 && i>2){
+                    if(lengthTmp == 1 && i>1){
                         if (type == true) {
                             x = rects[0].rectX + rects[0].rectWidth;
                             y = rects[0].rectY;
@@ -221,45 +194,76 @@
                         }
                     }
                     rects = [];
-                    //console.log(rects);
                     rectTmp.rectX = x;
                     rectTmp.rectY = y;
                     console.log("svg:x,y,width,height:"+x+" "+y+" "+width + " "+height);
                     if(width <= height) {
-                        //type = false;
+                        type = false;
                         rectTmp.rectWidth = width;
                         rectTmp.rectHeight = rectTmp.size / rectTmp.rectWidth;
                     }
                     else{
-                       // type = true;
+                        type = true;
                         rectTmp.rectHeight = height;
                         rectTmp.rectWidth = rectTmp.size / rectTmp.rectHeight;
                     }
-                    console.log("hahahaha"+x+" "+y);
-                    if(width <= height)
-                        type = false;
-                    else
-                        type = true;
                     console.log(type);
                     console.log("push rect WH:"+rectTmp.rectWidth + " "+ rectTmp.rectHeight);
                     rects.push(rectTmp);
+                    dataset.children[i].rect = rectTmp;
                 }
             }
             for(var j = 0; j < rects.length; j++) {
                 //console.log(rects[j]);
                 this.draw(rects[j], svg);
             }
+        },
+        start: function(){
+            var width = 600;
+            var height = 400;
+            var x = 0, y = 0;
+            var svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
+            svg.setAttribute("width", width);
+            svg.setAttribute("height", height);
+            this.suitSvg(flare, width, height);
+            document.body.appendChild(svg);
+
+            this.cal(x, y, width, height, svg, flare,colorSet);
+            flag = false;
+            console.log("There!**********");
+            for(var i = 0; i < 10; i++){
+                //if(flare.children[i].children!=undefined) {
+                var colorTmp = [];
+                for(var j = 0; j < 20; j++)
+                    colorTmp.push(flare.children[i].rect.color);
+
+                    console.log(flare.children[i]);
+                    this.suitSvg(flare.children[i], flare.children[i].rect.rectWidth, flare.children[i].rect.rectHeight);
+                    this.cal(flare.children[i].rect.rectX, flare.children[i].rect.rectY, flare.children[i].rect.rectWidth,
+                            flare.children[i].rect.rectHeight,svg,flare.children[i],colorTmp);
+                //}
+//                for(var j = 0; j < 10; j++){
+//                    //if(flare.children[i].children!=undefined) {
+//                    this.suitSvg(flare.children[i].children[j], flare.children[i].children[j].rect.rectWidth, flare.children[i].children[j].rect.rectHeight);
+//                    this.cal(flare.children[i].rect.rectX, flare.children[i].rect.rectY, flare.children[i].rect.rectWidth,
+//                            flare.children[i].children[j].rect.rectHeight,svg,flare.children[i].children[j],colorTmp);
+//                    //}
+//                }
+            }
+//            for(var l = 0; l < dataset.children.length; l++){
+//                console.log(dataset.children[l].name+" "+dataset.children[l].size);
+//            }
         }
     }
 </script>
 <body>
 <script>
-    var dataset = flare;
     var colorSet = ["#AFAF61","#00BB00","#FF77FF","#00FFFF","#FF2D2D","#8600FF","#2894FF","#F9F900","#FF8000","#8F4586"];
-    getSize(dataset);
-    sort(dataset);
-    var tree = new Tree(dataset);
+    getSize(flare);
+    sort(flare);
+    var tree = new Tree(flare);
     tree.start();
+    var flag = true;
 </script>
 </body>
 </html>
