--- a/coding_practice_JS/treeMap/treeMap.html
+++ b/coding_practice_JS/treeMap/treeMap.html
@@ -243,13 +243,13 @@
                             flare.children[i].rect.rectHeight,svg,flare.children[i],colorTmp);
                 //}
 //                for(var j = 0; j < 10; j++){
-//                    //if(flare.children[i].children!=undefined) {
+//                    if(flare.children[i].children[j]!=null) {
 //                    this.suitSvg(flare.children[i].children[j], flare.children[i].children[j].rect.rectWidth, flare.children[i].children[j].rect.rectHeight);
 //                    this.cal(flare.children[i].rect.rectX, flare.children[i].rect.rectY, flare.children[i].rect.rectWidth,
 //                            flare.children[i].children[j].rect.rectHeight,svg,flare.children[i].children[j],colorTmp);
-//                    //}
+//                    }
 //                }
-            }
+//            }
 //            for(var l = 0; l < dataset.children.length; l++){
 //                console.log(dataset.children[l].name+" "+dataset.children[l].size);
 //            }
