--- a/coding_practice_JS/hierarchyEdgeBundling/hierarchyEdgeBundling.html
+++ b/coding_practice_JS/hierarchyEdgeBundling/hierarchyEdgeBundling.html
@@ -256,6 +256,7 @@
                 var angleRecord = 0;
                 data[0].x = 500;
                 data[0].y = 0;
+                data[0].angle = 0;
                 for(var i = 1; i < data.length; i++){
                     if(data[i].group == data[i-1].group) {
                         angleRecord += angle;
@@ -263,8 +264,9 @@
                     else{
                         angleRecord += (angle*2);
                     }
-                    data[i].x = 500 + 500 * Math.sin(angleRecord);
-                    data[i].y = 500 - 500 * Math.cos(angleRecord);
+                    data[i].angle = angleRecord;
+                    data[i].x = 500 + 400 * Math.sin(angleRecord);
+                    data[i].y = 500 - 400 * Math.cos(angleRecord);
                 }
             },
             getExport: function(){
@@ -296,21 +298,19 @@
                 var circle = document.createElementNS("http://www.w3.org/2000/svg", "circle");
                 circle.setAttribute("cx", "500");
                 circle.setAttribute("cy", "500");
-                circle.setAttribute("r", "500");
+                circle.setAttribute("r", "400");
                 circle.setAttribute("fill", "none");
                 circle.setAttribute("stroke-width", "3px");
                 circle.setAttribute("stroke", "blue");
                 svg.appendChild(circle);
 
                 for(var i in data){
-                    var circle = document.createElementNS("http://www.w3.org/2000/svg", "circle");
-                    circle.setAttribute("cx", data[i].x);
-                    circle.setAttribute("cy", data[i].y);
-                    circle.setAttribute("r", "3");
-                    circle.setAttribute("fill", "red");
-                    circle.setAttribute("stroke-width", "1px");
-                    circle.setAttribute("stroke", "red");
-                    svg.appendChild(circle);
+                    var text = document.createElementNS("http://www.w3.org/2000/svg", "text");
+                    text.setAttribute("x", data[i].x);
+                    text.setAttribute("y", data[i].y);
+                    text.innerHTML = data[i].name.split(".")[data[i].name.split(".").length-1];
+                    text.setAttribute("transform", "rotate("+((data[i].angle/(2*Math.PI)*360)-90)+","+data[i].x+","+data[i].y+")");
+                    svg.appendChild(text);
                 }
             }
         }
